--- a/src/component/topbar/topbar.scss
+++ b/src/component/topbar/topbar.scss
@@ -8,4 +8,119 @@
     position: fixed;
     top: 0;
     z-index: 3;
+    transition: all .5s ease;
+
+    .wrapper{
+        padding: 0 30px;
+        height: 100%;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+
+        .left{
+            display: flex;
+
+            a{
+                color: inherit;
+                text-decoration: none;
+                display: flex;
+                align-items: center;
+
+                img{
+                    width: 45px;
+
+                    @include mobile{
+                       width: 40px;
+                    }
+                }
+                h1 {
+                    font-size: 20px;
+                    margin-left: 10px;
+                    font-weight: 700;
+
+                    @include mobile{
+                        font-size: 18px;
+                     }
+                }
+            }
+
+            .itemContainer{
+                display: flex;
+                align-items: center;
+                margin-left: 30px;
+                cursor: pointer;
+                transition: all 1s ease;
+
+                @include mobile{
+                    display: none;
+                }
+
+                .icon{
+                    font-size: 18px;
+                    margin-right: 5px;
+                }
+
+                span{
+                    font-size: 15px;
+                    font-weight: 500;
+                }
+
+                &:hover{
+                    opacity: 0.8;
+                }
+            }
+        }
+
+        .right{
+            display: flex;
+
+            .itemContainer{
+                margin-right: 30px;
+                cursor: pointer;
+
+                a{
+                    text-decoration: none;
+                    color: inherit;
+                }
+            }
+
+            .humburger{
+                width: 32px;
+                height: 25px;
+                display: flex;
+                flex-direction: column;
+                justify-content: space-between;
+                cursor: pointer;
+
+                span{
+                    width: 100%;
+                    height: 3px;
+                    background-color: $mainColor;
+                    transform-origin: left;
+                    transition: all 2s ease;
+                }
+            }
+        }
+    }
+
+    &.active{
+        background-color: $mainColor;
+        color: white;
+
+        .humburger{
+            span{
+                &:first-child{
+                    background-color: white;
+                    transform: rotate(45deg);
+                }
+                &:nth-child(2){
+                 opacity: 0;   
+                }
+                &:last-child{
+                    background-color: white;
+                    transform: rotate(-45deg);
+                }
+            }
+        }
+    }
 }
